[gd_scene load_steps=4 format=3 uid="uid://cexmjcvxnrm1"]

[ext_resource type="Script" uid="uid://bjpeell44xmd2" path="res://scripts/StartMenu.gd" id="1_start_menu"]
[ext_resource type="Texture2D" uid="uid://cxonxat8jv4ng" path="res://assets/bg/bg_gradient_720x1280.png" id="2_bg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button"]
bg_color = Color(1, 0.6, 0.2, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25
shadow_color = Color(0, 0, 0, 0.3)
shadow_size = 8
shadow_offset = Vector2(0, 4)

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_start_menu")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_bg")
stretch_mode = 6

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -341.0
offset_top = -214.0
offset_right = 359.0
offset_bottom = 86.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="StartButton" type="Button" parent="MainContainer"]
custom_minimum_size = Vector2(300, 80)
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.2, 0.1, 0.05, 1)
theme_override_colors/font_color = Color(0.2, 0.1, 0.05, 1)
theme_override_colors/font_pressed_color = Color(0.2, 0.1, 0.05, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/hover = SubResource("StyleBoxFlat_button")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button")
theme_override_styles/normal = SubResource("StyleBoxFlat_button")
text = "Начать играть"

[node name="DescriptionLabel" type="Label" parent="MainContainer"]
custom_minimum_size = Vector2(700, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.8)
theme_override_font_sizes/font_size = 27
text = "Собирай падающие пончики и набирай очки!
Управляй башней и лови как можно больше сладостей.
Будь осторожен - не урони пончики!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[connection signal="pressed" from="MainContainer/StartButton" to="." method="_on_start_button_pressed"]
